--- a/src/styles/tailwind.less
+++ b/src/styles/tailwind.less
@@ -1,9 +1,9 @@
+/*
+  * 非Vue/React框架，推荐这么使用
+  */
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
-// @tailwind base;
-// @tailwind components;
-// @tailwind utilities;
 
 ::-webkit-scrollbar-thumb {
   border-radius: 10px;
