登录页面样式

--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -16,3 +16,17 @@
     background-color: rgba(0, 0, 0, .5);
   }
 }
+/* 自定义字体 */
+@font-face {
+	font-family: 'YouSheBiaoTiHei';
+	src: url('../assets/fonts/YouSheBiaoTiHei/YouSheBiaoTiHei.otf');
+	font-weight: normal;
+	font-style: normal;
+}
+/* 自定义字体 */
+@font-face {
+	font-family: 'ChivoRegular';
+	src: url('../assets/fonts/Chivo-Regular/Chivo-Regular-13.otf');
+	font-weight: normal;
+	font-style: normal;
+}
